# termchat

./: .gitignore  BACKLOG.md  CLAUDE.md  Makefile  README.md  backlog.md  pyproject.toml
termchat/: __main__.py  app.py  config.py
termchat/domain/: __init__.py  message.py  provider.py
termchat/infra/: emote_cache.py
termchat/providers/: fake.py  twitch.py  twitch_emotes.py  youtube.py
termchat/ui/: _theme.py  emoji_render.py  terminal.py  tui.py
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_scaffold.py  test_shutdown.py
tests/domain/: test_message.py  test_provider.py
tests/providers/: test_fake.py  test_twitch.py  test_twitch_emotes.py  test_youtube.py
tests/ui/: test_emoji_render.py  test_terminal.py
