[project]
name = "termchat"
version = "0.1.0"
description = "Async read-only terminal multi-chat aggregator"
requires-python = ">=3.12"
dependencies = [
    "chat-downloader>=0.2.8",
    "httpx>=0.27",
    "textual>=8.2.7",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--tb=short"]
