[project]
name = "termchat"
version = "0.1.0"
description = "Async read-only terminal multi-chat aggregator"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pillow>=10",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--tb=short"]
